<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_rectangle_btn_white_gray"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/album"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_text" />

    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_rectangle_btn_white_gray"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/shoot"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_text" />

    <TextView
        android:id="@+id/tv_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_rectangle_btn_white_gray"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="修改密码"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_text" />

    <TextView
        android:id="@+id/tv_login_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_rectangle_btn_white_gray"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="退出登录"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_text" />

    <TextView
        android:id="@+id/tv_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/sel_rectangle_btn_white_gray"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/file"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_rectangle_btn_white_gray"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="16sp" />
</LinearLayout>